PHASE 2 added some methods and made changes in UI